--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "tdd project"
-version = "0.0.1"
+name = "tdd-project"
+version = "0.1.0"
 description = ""
-authors = ["Nayanna Nara <nayanna501@gmail.com>"]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+packages = [{include = "store"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
